@@ -145,7 +145,7 @@
 
     <para><inlinemediaobject>
         <imageobject>
-          <imagedata fileref="screenshots/dircomp1.gif" format="GIF" />
+          <imagedata fileref="screenshots/foldercomp1.png" format="PNG" />
         </imageobject>
       </inlinemediaobject></para>
 
